--- a/angular.json
+++ b/angular.json
@@ -32,9 +32,7 @@
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ],
-            "scripts": [
-              "src/assets/js/hour.js"
-            ]
+            "scripts": []
           },
           "configurations": {
             "production": {
